[package]
name = "plugin"
version = "0.1.0"
authors = ["mohaque"]

[dependencies]
build = { path = "../build" }
chrono = "^0.4.5"
dunce = "0.1.1"
failure = "^0.1"
indoc = "^0.2"
log = "^0.4"
os_pipe = "^0.6.2"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
timeago = "^0.1.5"
walkdir = "^2"